--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -13,7 +13,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-	<sessionState mode="InProc" timeout="20"></sessionState>
+    <sessionState mode="InProc" timeout="20">
+    </sessionState>
+    <httpModules>
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -57,6 +62,10 @@
         <assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.4.3.0" newVersion="2.4.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -65,12 +74,22 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-	<system.web>
-		<!--On: When web ready for deploy | Off: Debuging mode-->
-		<customErrors mode="On">
-			<error statusCode="404" redirect="~/Error/PageNotFound" />
-			<error statusCode="401" redirect="~/Error/Unauthorized" />
-		</customErrors>
-		<globalization culture="vi-VN" uiCulture="vi-VN" fileEncoding="utf-8"></globalization>
-	</system.web>
+  <system.web>
+    <!--On: When web ready for deploy | Off: Debuging mode-->
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/Error/PageNotFound" />
+      <error statusCode="401" redirect="~/Error/Unauthorized" />
+    </customErrors>
+    <globalization culture="vi-VN" uiCulture="vi-VN" fileEncoding="utf-8">
+    </globalization>
+  </system.web>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <remove name="TelemetryCorrelationHttpModule" />
+      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+    </modules>
+  </system.webServer>
 </configuration>
