--- a/StudentManagementWebApp/StudentManagementWebApp.csproj
+++ b/StudentManagementWebApp/StudentManagementWebApp.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Services\UsersService.cs" />
     <Compile Include="ChatHub.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utilites\Comparer\SubjectEComparer.cs" />
     <Compile Include="Utilites\DatabaseHelper.cs" />
     <Compile Include="Utilites\Manager.cs" />
     <Compile Include="Utilites\UnityConfig.cs" />
