--- a/StudentManagementWebApp/packages.config
+++ b/StudentManagementWebApp/packages.config
@@ -37,6 +37,10 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NHibernate" version="5.3.11" targetFramework="net461" />
+  <package id="NLog" version="4.7.7" targetFramework="net461" />
+  <package id="NLog.Config" version="4.7.7" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net461" />
+  <package id="NLog.Web" version="4.10.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="popper.js" version="1.16.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
