--- a/StudentManagementWebApp/StudentManagementWebApp.csproj
+++ b/StudentManagementWebApp/StudentManagementWebApp.csproj
@@ -239,10 +239,12 @@
     <Compile Include="Container\ControllersInstaller.cs" />
     <Compile Include="Container\ServicesInstaller.cs" />
     <Compile Include="Container\WindsorControllerFactory.cs" />
-    <Compile Include="Interface\IData\ICourseData.cs" />
+    <Compile Include="Interface\IData\IResultData.cs" />
     <Compile Include="Interface\IData\ISubjectData.cs" />
     <Compile Include="Interface\IData\IStudentData.cs" />
     <Compile Include="Interface\IData\IUsersData.cs" />
+    <Compile Include="Interface\IServices\ICourseService.cs" />
+    <Compile Include="Interface\IServices\IResultService.cs" />
     <Compile Include="Interface\IServices\ISubjectService.cs" />
     <Compile Include="Interface\IServices\IStudentService.cs" />
     <Compile Include="Interface\IServices\IUsersService.cs" />
@@ -305,6 +307,7 @@
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Customs\CR.js" />
     <Content Include="Scripts\Customs\sb-admin-2.js" />
     <Content Include="Scripts\Customs\sb-admin-2.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -2066,6 +2069,8 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
+    <Content Include="ClassDiagram2.cd" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
