update path of Directory

--- a/StudentManagementWebApp/StudentManagementWebApp.csproj
+++ b/StudentManagementWebApp/StudentManagementWebApp.csproj
@@ -254,15 +254,15 @@
     <Compile Include="Container\ControllersInstaller.cs" />
     <Compile Include="Container\ServicesInstaller.cs" />
     <Compile Include="Container\WindsorControllerFactory.cs" />
-    <Compile Include="Interface\IData\IResultData.cs" />
-    <Compile Include="Interface\IData\ISubjectData.cs" />
-    <Compile Include="Interface\IData\IStudentData.cs" />
-    <Compile Include="Interface\IData\IUsersData.cs" />
-    <Compile Include="Interface\IServices\ICourseService.cs" />
-    <Compile Include="Interface\IServices\IResultService.cs" />
-    <Compile Include="Interface\IServices\ISubjectService.cs" />
-    <Compile Include="Interface\IServices\IStudentService.cs" />
-    <Compile Include="Interface\IServices\IUsersService.cs" />
+    <Compile Include="Core\Interface\IData\IResultData.cs" />
+    <Compile Include="Core\Interface\IData\ISubjectData.cs" />
+    <Compile Include="Core\Interface\IData\IStudentData.cs" />
+    <Compile Include="Core\Interface\IData\IUsersData.cs" />
+    <Compile Include="Core\Interface\IServices\ICourseService.cs" />
+    <Compile Include="Core\Interface\IServices\IResultService.cs" />
+    <Compile Include="Core\Interface\IServices\ISubjectService.cs" />
+    <Compile Include="Core\Interface\IServices\IStudentService.cs" />
+    <Compile Include="Core\Interface\IServices\IUsersService.cs" />
     <Compile Include="Models\AuthorizeEntryPermission.cs" />
     <Compile Include="Models\AuthorizeRoleAttribute.cs" />
     <Compile Include="Models\Course.cs" />
@@ -277,12 +277,12 @@
     <Compile Include="Models\Subject.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CourseService.cs" />
-    <Compile Include="Services\ScoreService.cs" />
-    <Compile Include="Services\ResultService.cs" />
-    <Compile Include="Services\SubjectService.cs" />
-    <Compile Include="Services\StudentService.cs" />
-    <Compile Include="Services\UsersService.cs" />
+    <Compile Include="Core\Services\CourseService.cs" />
+    <Compile Include="Core\Services\ScoreService.cs" />
+    <Compile Include="Core\Services\ResultService.cs" />
+    <Compile Include="Core\Services\SubjectService.cs" />
+    <Compile Include="Core\Services\StudentService.cs" />
+    <Compile Include="Core\Services\UsersService.cs" />
     <Compile Include="ChatHub.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilites\Comparer\SubjectEComparer.cs" />
