--- a/StudentManagementWebApp/Web.config
+++ b/StudentManagementWebApp/Web.config
@@ -84,8 +84,7 @@
       <error statusCode="404" redirect="~/Error/PageNotFound" />
       <error statusCode="401" redirect="~/Error/Unauthorized" />
     </customErrors>
-    <globalization culture="vi-VN" uiCulture="vi-VN" fileEncoding="utf-8">
-    </globalization>
+    <globalization uiCulture="en" culture="en-GB" fileEncoding="utf-8"></globalization>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
